Fixed gap above our expertise

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -452,7 +452,7 @@
 }
 
 .detailsInner > .divider + .infoSection {
-  padding-top: 190px;
+  padding-top: 114px;
 }
 
 .detailsInner > .infoSection + .divider + .infoSection {
